		The TestFile check in mod.yaml has been renamed to TestFiles (plural!) and now supports a comma-separated list of assets that are required to load the game.
		DisabledOverlay has been split from RenderBuilding. Use it together with RequiresPower and CanPowerDown for buildings or directly with Husk.
	Packaging:
		Removed portable install option from Windows installer as the game left without write access breaks content download and error log generation.
		Added HTML documentation to the Windows installer.
		Fixed broken FreeType 2 dependency for Fedora RPM.
		Added SDL 2 as a dependency for the RPM package.
20131223:
	All mods:
		Fixed dead units sometimes exploding or leaving husks when they weren't in the world.
		Added hover and disabled button states [RA / D2K / TS]
		Added double click start support to the replay browser.
		Fixed low projectiles not colliding with walls.
		Fixed double-click selection priority glitches.
		Improved UI decorations (selection boxes, target lines, etc) in pixel double mode.
		Added additional stand animations to infantry [RA / TD]
		Added the ability to double click select maps and music.
		Fixed base attack notification playing when allied engineers repaired your buildings.
		Improved the ingame chat interface and input, with it defaulting to Team Chat.
		Redesigned the settings panel.
		Re-added move flashes.
		Added a setting to always display unit status bars (can also be toggled by hotkey).
		Added a setting for team health bar colors.
		Added a new hotkey to select all units on screen (default: CTRL + A).
		Added a new hotkey to jump to production buildings (default: TAB).
		Changed default hotkey (PageUp/Down) for build palette cycling and made reverse user configurable.
		Improved shroud/fog rendering.
	Asset Browser:
		Fixed crashes when trying to load invalid filenames or sprites with just 1 frame.
		Added support for all sprite types.
		Added palette chooser and colorpicker dropdown boxes.
		Overhauled layout.